# internship-projects

./: README.md  pyproject.toml  requirements.txt
Project_1/doc/dashboard/: sale_insights_final.pbix
Project_1/doc/data/: sales_data_cleaned.csv
Project_1/notebook/: sales_data_analysis.ipynb
Project_2/analysis_files/: data cleaning and aggregation.sql
Project_2/doc/analysis_files/: raw_sales_data.ipynb
Project_2/doc/data/: raw_sales_data.csv  sales_data_cleaned.csv
Project_3/doc/data/: cleaned_sales_data_week_3.csv  raw_sales_data_week_3.csv
Project_3/notebook/: raw_sales_data.ipynb
Project_4/doc/data/: Customer_Sales_Cleaned.csv  raw_dataset_week_4.csv
Project_4/notebook/: customer_sales.ipynb
